--- a/public/mails.html
+++ b/public/mails.html
@@ -149,7 +149,7 @@
     <div class="pagination" id="pagination"></div>
 
     <script>
-      const API_URL = "http://localhost:3000/emails"; // change if hosted elsewhere
+      const API_URL = "https://demo-backend-rhxb.onrender.com/emails"; // change if hosted elsewhere
       const emailBody = document.getElementById("emailBody");
       const pagination = document.getElementById("pagination");
       const refreshBtn = document.getElementById("refresh");
